# data-heap

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.agents/skills/data-heap/: SKILL.md
.claude/skills/data-heap/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
docker/: entrypoint.sh
skills/data-heap/: SKILL.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/sqlite/: mapping.rs  migrations.rs  mod.rs  ops.rs  tests.rs
src/adapters/sqlite/migrations/: 0001_init.sql  0002_items_tombstone.sql
src/adapters/telegram/: api.rs  confirm.rs  mod.rs  parse.rs  voice.rs
src/adapters/telegram/parse/: tests.rs
src/adapters/transcription/: hosted.rs  local_whisper.rs  mod.rs
src/config/: mod.rs  tests.rs
src/daemon/: http.rs  mod.rs  polling.rs
src/daemon/http/: tests.rs
src/domain/: error.rs  item.rs  mod.rs  ports.rs  source.rs
