[package]
name = "data-heap"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Text ingestion service: dump thoughts, finances, links and voice from Telegram into one heap for background agents."
repository = "https://github.com/gently-whitesnow/data-heap"

[lib]
name = "data_heap"
path = "src/lib.rs"

[[bin]]
name = "data-heap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
