[package]
name = "data-heap"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Text ingestion service: dump thoughts, finances, links and voice from Telegram into one heap for background agents."
repository = "https://github.com/gently-whitesnow/data-heap"

[lib]
name = "data_heap"
path = "src/lib.rs"

[[bin]]
name = "data-heap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
bytes = "1"
secrecy = "0.10"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
struct_field_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
